  
    {+} Blowfish CBC support (#124)
    {+} Box Office Mojo support
    {+} New HTTP Library (up to 50% faster) with Socks5 support
    {+} News System to store important messages to encrypted file. (#173, #164, #198)
    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {+} New !affils command.
    {+} Show a message when 0 byte file was detected on startup (#189)
    {+} !status and !uptime shows if you use 32/64-bit version of slftp and used compiler version
    {+} !lastlog command to show last log entries. (#160)
    {+} Support for CTCP Requests (might be useful for scripters)
    {+} Show a warn message if important files not found on startup
    {+} Show PID & actual memory usage in !status command (atm linux only!) (#170)
    {+} !fetchuser cmd to fetch some information about site settings + basic recommendation (#51)
    {+} Support for wildcards in !batch (#222)                                  --- some more work + testing needed ---
    {+} Completely new SQLite engine
    {+} Completely new MySQL/MariaDB engine
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {#} precmd can be removed by omiting precommand via !setprecmd (#178)
    {#} Remove language and 2160(p|i) tags before searching on TVmaze
    {#} Correct counting and comparing of CRC errors in TPazoRaceTask
    {#} Missing built-in skip features from slftp.skip added (#195)
    {#} Saving TVInfo for some shows containing ' in its name (#191, #196)
    {#} Double free of TNukeQueueItem (#203)
    {#} !batch looses sites in bnctest output over time (#216)
    {#} !prelist parameter count (#212)
    {#} Wrong mp3genre detected on IRC announce (#114)
    {#} !raw command timeout/error handling (#225)
    {#} !slots command didn't supported showing of siteslots for all sites (#230)
    {^} Requests can be filled from sites without checking the routes. (#168)